src/objects/FieldRequirement__mdt.object
<CustomObject>
    <description>Custom requirement(s) for field values</description>
    <fields>
        <fullName>Field__c</fullName>
        <description>Field name for the field requirement</description>
        <inlineHelpText>Field name for the field requirement</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequiredValue__c</fullName>
        <description>Required value for the field requirement</description>
        <inlineHelpText>Required value for the field requirement</inlineHelpText>
        <label>Required Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <description>SObject name (lower-case) for the field requirement</description>
        <inlineHelpText>SObject name (lower-case) for the field requirement</inlineHelpText>
        <label>SObject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Field Requirement</label>
    <pluralLabel>Field Requirements</pluralLabel>
</CustomObject>